--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://wa.me/+918660914993"><i class="bi bi-whatsapp">Request for Demo</a>
+      <a class="btn-getstarted" href="https://wa.me/+918660914993"><i class="bi bi-whatsapp">Request Demo</a>
 
     </div>
   </header>
