--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
       </div>
 
-    </section><!-- /Testimonials Section --> -->
+    </section><!-- /Testimonials Section -->
 
 
     <!-- Contact Section -->
