--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             
             <div class="d-flex">
               <a href="#services" class="btn-get-started">Get Started</a>
-              <a href="https://www.youtube.com/watch?v=Sfzo4xm5eX8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+              <a href="https://www.youtube.com/watch?v=3pL8SSdjV5M" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
