--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             
             <div class="d-flex">
               <a href="#services" class="btn-get-started">Get Started</a>
-              <a href="https://www.youtube.com/watch?v=3pL8SSdjV5M" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+              <a href="https://www.youtube.com/watch?v=bT9-dVcIMvE" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
@@ -147,8 +147,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1700" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Students Trained +</p>
+              <span data-purecounter-start="0" data-purecounter-end="1785" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Students Trained ++</p>
             </div>
           </div> 
 
@@ -161,15 +161,15 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="895" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="695" data-purecounter-duration="1" class="purecounter"></span>
               <p>Placements</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="3400" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Overall Enrollments</p>
+              <span data-purecounter-start="0" data-purecounter-end="3124" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Overall Enrollments ++</p>
             </div>
           </div><!-- End Stats Item --remove this item--> 
 
