--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="695" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Placements</p>
+              <p>Placements ++</p>
             </div>
           </div>
 
